objects/nitro__Nitro_Workflow__c.object
<CustomObject>
    <description>Help process actions triggered by Salesforce Workflow Rules and Outbound Messages.</description>
    <fields>
        <fullName>nitro__Action_Name__c</fullName>
        <description>The Nitro Action being processed.</description>
        <label>Action Name</label>
        <length>2550</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>nitro__Nitro_Configuration__c</fullName>
        <label>Nitro Configuration</label>
        <length>355</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>nitro__Nitro_User_Id_List__c</fullName>
        <label>Nitro User Id List</label>
        <length>9600</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>nitro__Objects_to_Process__c</fullName>
        <label>Objects to Process</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>nitro__Salesforce_Object_Id_List__c</fullName>
        <label>Salesforce Object Id List</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>nitro__Salesforce_User_Id_List__c</fullName>
        <label>Salesforce User Id List</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <label>Nitro Workflow</label>
    <listViews>
        <fullName>nitro__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Helper Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Nitro Workflow</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>